--- a/9 - CSS Moderno/4 - Flex Container/style.css
+++ b/9 - CSS Moderno/4 - Flex Container/style.css
@@ -7,6 +7,11 @@
 .container {
   background-color: grey;
   min-height: 100vh;
+  display: flex;
+  gap: 0px 15px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 
 .item {
@@ -15,4 +20,7 @@
   border: 2px solid black;
   background-color: white;
   font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
