html de falcon 9 pronta

--- a/11 - Bootstrap/17 - OneBitX/sass/commonElements/commonElements.scss
+++ b/11 - Bootstrap/17 - OneBitX/sass/commonElements/commonElements.scss
@@ -29,6 +29,11 @@
   margin-right: 40px;
 }
 
+#button {
+  padding: $padding-button;
+  border: 2px solid white;
+}
+
 @media (max-width: 405px) {
   .logoPc {
     width: 180px;
