style e mobile completos da página Falcon9

--- a/11 - Bootstrap/17 - OneBitX/css/style.css
+++ b/11 - Bootstrap/17 - OneBitX/css/style.css
@@ -34,6 +34,11 @@
   margin-right: 40px;
 }
 
+#button {
+  padding: 15px 35px;
+  border: 2px solid white;
+}
+
 @media (max-width: 405px) {
   .logoPc {
     width: 180px;
@@ -41,6 +46,11 @@
   }
   .footer {
     font-size: 10px;
+  }
+}
+@media (max-width: 375px) {
+  .downloadDesc button {
+    margin: 10px 0px;
   }
 }
 @media (max-width: 350px) {
@@ -68,16 +78,12 @@
 
 .shortTitle {
   width: 550px;
-  margin-bottom: -25px;
+  margin-bottom: 25px;
 }
 
 .mediumTitle {
   width: 650px;
   margin-bottom: -25px;
-}
-
-#button {
-  padding: 15px 35px;
 }
 
 .footer {
@@ -112,6 +118,154 @@
   .mediumTitle {
     width: auto;
     font-size: 40px;
+  }
+}
+.container00.carrossel01 {
+  background-image: url(../images/falcon9/03.jpg);
+}
+.container00.carrossel02 {
+  background-image: url(../images/falcon9/04.jpg);
+}
+.container00.carrossel03 {
+  background-image: url(../images/falcon9/05.jpg);
+}
+.container00.carrossel04 {
+  background-image: url(../images/falcon9/06.jpg);
+}
+.container00.carrossel05 {
+  background-image: url(../images/falcon9/07.jpg);
+}
+.container00.container05 {
+  background-image: url(../images/falcon9/01.jpg);
+}
+.container00.container06 {
+  background-image: url(../images/falcon9/02.jpg);
+}
+.container00.container07 {
+  background-image: url(../images/falcon9/08.jpg);
+}
+
+.titleContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 80vh;
+}
+
+.titleFalcon9 {
+  font-size: 90px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 514;
+}
+
+.numbers {
+  background-color: black;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.numbers .titleNumb {
+  font-size: 90px;
+}
+.numbers .subtitleNumb {
+  font-size: 60px;
+}
+
+.falcon9Desc {
+  font-size: 22px;
+  width: 640px;
+  line-height: 50px;
+}
+
+.containerFalconDesc {
+  display: grid;
+  height: 90vh;
+  align-items: center;
+  justify-content: left;
+}
+
+#overViewPosition {
+  width: 500px;
+  margin-left: 13%;
+  padding-top: 15%;
+}
+
+.carrosselSlide .img {
+  height: 100vh;
+}
+
+.carousselText {
+  background-color: black;
+}
+
+.downloadDesc {
+  background-color: black;
+  height: 85vh;
+  padding-top: 240px;
+}
+.downloadDesc a {
+  text-decoration: none;
+  color: #555252;
+}
+.downloadDesc a:hover {
+  color: #b9b9b9;
+}
+.downloadDesc button {
+  border: 2px solid white;
+  margin-right: 10px;
+}
+
+.footer {
+  background-color: black;
+  height: 15vh;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+.footer a:hover {
+  color: #b9b9b9;
+}
+
+@media (max-width: 768px) {
+  .numbers .titleNumb {
+    font-size: 80px;
+  }
+  .numbers .subtitleNumb {
+    font-size: 18px;
+  }
+  #overViewPosition {
+    padding-top: 35%;
+  }
+  .falcon9Desc {
+    width: auto;
+  }
+}
+@media (max-width: 575px) {
+  .numbers {
+    height: 60vh;
+  }
+  #overViewPosition {
+    width: auto;
+    margin-left: auto;
+  }
+}
+@media (max-width: 375px) {
+  .titleFalcon9 {
+    font-size: 50px;
+  }
+  .falcon9Desc {
+    font-size: 18px;
+    line-height: auto;
+  }
+  .subtitleFalcon {
+    font-size: 16px;
   }
 }
 
