--- a/11 - Bootstrap/17 - OneBitX/sass/commonElements/commonElements.scss
+++ b/11 - Bootstrap/17 - OneBitX/sass/commonElements/commonElements.scss
@@ -44,6 +44,14 @@
   }
 }
 
+@media (max-width: 375px) {
+  .downloadDesc {
+    button {
+      margin: 10px 0px;
+    }
+  }
+}
+
 @media (max-width: 350px) {
   .logoPc {
     width: 150px;
