css da ultima página feito

--- a/11 - Bootstrap/17 - OneBitX/css/style.css
+++ b/11 - Bootstrap/17 - OneBitX/css/style.css
@@ -39,6 +39,25 @@
   border: 2px solid white;
 }
 
+.downloadDesc {
+  background-color: black;
+  height: 85vh;
+  padding-top: 240px;
+}
+.downloadDesc button {
+  border: 2px solid white;
+  margin-right: 10px;
+}
+
+.emailObc {
+  text-decoration: none;
+  color: white;
+  border-bottom: 1px solid white;
+}
+.emailObc:hover {
+  color: #b9b9b9;
+}
+
 @media (max-width: 405px) {
   .logoPc {
     width: 180px;
@@ -199,23 +218,6 @@
   background-color: black;
 }
 
-.downloadDesc {
-  background-color: black;
-  height: 85vh;
-  padding-top: 240px;
-}
-.downloadDesc a {
-  text-decoration: none;
-  color: #555252;
-}
-.downloadDesc a:hover {
-  color: #b9b9b9;
-}
-.downloadDesc button {
-  border: 2px solid white;
-  margin-right: 10px;
-}
-
 .footer {
   background-color: black;
   height: 15vh;
@@ -266,6 +268,93 @@
   }
   .subtitleFalcon {
     font-size: 16px;
+  }
+}
+.container00.container08 {
+  background-image: url(../images/humanFlight/01.jpg);
+}
+.container00.container09 {
+  background-image: url(../images/humanFlight/02.jpg);
+}
+.container00.container10 {
+  background-image: url(../images/humanFlight/03.jpg);
+}
+.container00.container11 {
+  background-image: url(../images/humanFlight/04.jpg);
+}
+.container00.container12 {
+  background-image: url(../images/humanFlight/05.jpg);
+}
+
+.container01Content {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container01Content .titleHuman {
+  font-size: 120px;
+}
+.container01Content .subTitleHuman {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.earthDesc {
+  background-color: black;
+  height: 25vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.earthDesc .textDescEarth {
+  color: #d8d8d8;
+  font-weight: 400;
+  font-size: 20px;
+  width: 800px;
+}
+
+.containerRightContent {
+  margin-left: 55%;
+  padding-top: 15%;
+}
+
+.titleSection {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.subTitle {
+  margin-bottom: 40px;
+  font-weight: 300;
+}
+
+.containerLeftContent {
+  margin-left: 5%;
+  padding-top: 15%;
+}
+
+@media (max-width: 768px) {
+  .container01Content .titleHuman {
+    font-size: 90px;
+  }
+  .container01Content img {
+    width: 150px;
+  }
+  .containerRightContent {
+    margin-left: 15%;
+  }
+  .containerLeftContent {
+    margin-left: 15%;
+  }
+  .earthDesc .textDescEarth {
+    color: #d8d8d8;
+    font-weight: 400;
+    font-size: 16px;
+    width: auto;
   }
 }
 
