--- a/11 - Bootstrap/17 - OneBitX/css/style.css
+++ b/11 - Bootstrap/17 - OneBitX/css/style.css
@@ -357,5 +357,30 @@
     width: auto;
   }
 }
+@media (max-width: 610px) {
+  .container01Content .titleHuman {
+    font-size: 60px;
+  }
+  .container01Content .subTitleHuman {
+    font-size: 24px;
+  }
+  .containerRightContent {
+    margin-left: 5%;
+  }
+  .containerLeftContent {
+    margin-left: 5%;
+  }
+}
+@media (max-width: 380px) {
+  .container01Content .titleHuman {
+    font-size: 40px;
+  }
+  .container01Content .subTitleHuman {
+    font-size: 20px;
+  }
+  img {
+    width: 100px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
