feat: botão follow adicionado

--- a/12 - React/4 - Novos Componentes/2 - Exercicio/ExercicioID/src/components/Profile/styles.module.css
+++ b/12 - React/4 - Novos Componentes/2 - Exercicio/ExercicioID/src/components/Profile/styles.module.css
@@ -21,3 +21,11 @@
   gap: 1rem;
   align-items: center;
 }
+
+.followButton {
+  margin-left: 1rem;
+  padding: 0.125rem 0.5rem;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(224, 220, 220);
+}
